--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@ nav {
                 <i class="fas fa-server"></i>
                 الدخول للخادم
             </a>
-            <a href="https://discord.com/oauth2/authorize?client_id=1305868988915388477&response_type=code&redirect_uri=http%3A%2F%2F192.168.1.2%3A8080%2Fauth%2Fdiscord%2Fcallback&scope=identify+guilds" class="nav-btn glow">
+            <a href="https://discord.com/oauth2/authorize?client_id=1305868988915388477&response_type=code&redirect_uri=https%3A%2F%2Fsdg-mu.vercel.app%2F%3FvercelToolbarCode%3DADcwSNhYDPMnhov%2Fauth%2Fdiscord%2Fcallback&scope=guilds+identify" class="nav-btn glow">
                 <i class="fas fa-trophy"></i>
                 انضم للمسابقة
             </a>
