--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@ nav {
             </a>
             <a href="https://discord.com/oauth2/authorize?client_id=1305868988915388477&response_type=code&redirect_uri=https%3A%2F%2Fsdg-mu.vercel.app%2F%3FvercelToolbarCode%3DADcwSNhYDPMnhov%2Fauth%2Fdiscord%2Fcallback&scope=guilds+identify" class="nav-btn glow">
                 <i class="fas fa-trophy"></i>
-                انضم للمسابقة
+                تسجيل
             </a>
         </div>
     </nav>
